...
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddItemActivity"
    tools:showIn="@layout/activity_add_item">


    <EditText
        android:id="@+id/title_input"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/title_string"
        android:inputType="text"
...
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/done_before_input"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:labelFor="@+id/done_before_txt"
        android:text="@string/date_picker_button_string"
...
